--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
