--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "create-react-app": "^3.3.1",
     "express": "^4.17.1",
+    "react-masonry-css": "^1.0.14",
     "twit": "^2.2.11"
   }
 }
