--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "create-react-app": "^3.3.1",
     "express": "^4.17.1",
     "react-masonry-css": "^1.0.14",
+    "sentiment": "^5.0.2",
     "twit": "^2.2.11"
   }
 }
